# ghost-crew

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: example.yaml
scripts/: backfill.py  onboard_user.py  reindex.py
src/chief_of_staff/: agent.py  app.py  config.py  knowledge.py  reviewer.py  tracker.py
